# Wire-Bender-HMI

./: .gitignore  CMakeLists.txt  README.md
img/: UML.uxf
include/application/: MainApplication.h
include/control/: BlueprintButton.h  BlueprintDisplayPanel.h  BlueprintListPanel.h
include/frame/: MenuFrame.h  ProgressFrame.h  SerialPortSelectionFrame.h
include/interface/: IBlueprintDisplayHandler.h  IBlueprintStorage.h  IExit.h  IFrameSwitchHandler.h  IProduceManager.h  IProgressPanel.h  ISerialPortCommunicator.h  ISerialPortList.h  IShapeGallery.h
include/work/: BlueprintStorage.h  ProduceManager.h  ProduceManagerFactory.h  ProduceQueue.h  SerialPortManager.h
src/: main.cpp
src/application/: MainApplication.cpp
src/control/: BlueprintButton.cpp  BlueprintDisplayPanel.cpp  BlueprintListPanel.cpp
src/frame/: MenuFrame.cpp  ProgressFrame.cpp  SerialPortSelectionFrame.cpp
src/work/: BlueprintStorage.cpp  ProduceManager.cpp  ProduceManagerFactory.cpp  ProduceQueue.cpp  SerialPortManager.cpp
test/: test
test/Blueprint/: TestBlueprintStorage.h  test.cpp  test.sh
test/BlueprintButton/: TestBlueprintDisplay.h  test.cpp  test.sh
test/BlueprintDisplayPanel/: TestBlueprintStorage.h  TestStartProduce.h  test.cpp  test.sh
test/BlueprintListPanel/: TestShapeDisplay.h  test.cpp  test.sh
test/BlueprintStorage/: test.cpp  test.sh
test/MenuFrame/: TestStartProduce.h  test.cpp  test.sh
test/ProduceManager/: TestProgressPanel.h  test.cpp  test.sh
test/ProduceManagerFactory/: TestProgressPanel.h  TestSerialPortCommunicator.h  test.cpp  test.sh
(+11 files in other folders)
